# my-ai-agent

./: .dockerignore  .env.prod  .gitignore  AGENTS.md  CHANGE.md  README.md  System.md  TODO.md  compose.yml  pyproject.toml
docs/: Example.md  ai-agent.drawio
docs/analyzer/: abstruction.yml  order.yml  overview.md  page_01_会話履歴.md  page_02_LLM接続.md  page_03_スキーマ生成.md  page_04_ツール基盤.md  page_05_構造化出力.md  page_06_実行ループ.md  relation.yml
docs/archtiecture/: docker.md  files.md  marketing.md  monorepo.md  tool_call.md  tool_filter.md  vllm.md  全体実装.md  全体実装_hitl.md
docs/ref/ai-agent-from-scratch/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/ref/ai-agent-from-scratch/notebooks/ch02/: ch02_llm_api_basics.ipynb
docs/ref/ai-agent-from-scratch/notebooks/ch03/: ch03_tools_and_function_calling.ipynb
docs/ref/ai-agent-from-scratch/notebooks/ch04/: agent.py  base.py  ch04_react_agent.ipynb  context.py
docs/ref/ai-agent-from-scratch/notebooks/ch05/: agent.py  ch05_rag_and_file_tools.ipynb
docs/ref/ai-agent-from-scratch/notebooks/ch06/: agent.py  base.py  ch06_memory_systems.ipynb  context.py
docs/ref/ai-agent-from-scratch/notebooks/ch07/: ch07_planning_and_reflection.ipynb
docs/ref/ai-agent-from-scratch/notebooks/ch08/: agent.py  base.py  ch08_code_execution.ipynb  context.py
docs/ref/ai-agent-from-scratch/notebooks/ch09/: agent.py  ch09_multi_agent.ipynb  context.py
docs/ref/ai-agent-from-scratch/notebooks/ch10/: ch10_evaluation.ipynb
docs/ref/ai-agent-from-scratch/scratch_agents/: __init__.py  a2a_server.py  agent.py  callbacks.py  context.py  llm.py  planning.py  rag.py  remote.py  skills.py  transfer.py  types.py
docs/ref/ai-agent-from-scratch/scratch_agents/eval/: __init__.py  gaia.py  prompts.py
docs/ref/ai-agent-from-scratch/scratch_agents/memory/: __init__.py  context_optimizer.py  long_term.py  session.py
docs/ref/ai-agent-from-scratch/scratch_agents/tools/: __init__.py  agent_tool.py  base.py  calculator.py  code_execution.py  file_tools.py  helpers.py  mcp.py  memory_tool.py  search.py
docs/ref/ai-agent-from-scratch/scratch_agents/workflows/: __init__.py  loop.py  parallel.py  sequential.py
docs/reports/: test_1.md  test_2.md
infra/docker/: README.md  backend-entrypoint.sh  backend.Dockerfile  frontend.Dockerfile  nginx.conf
infra/ollama/: README.md
infra/sandbox/: Dockerfile  README.md
infra/vllm/: .env.example  README.md  compose.yaml
src/: app_tools.py  config.yml  init.py  main.py
src/agent/: __init__.py  agent.py  callbacks.py  code_exec.py  const.py  context.py  helper_agent.py  helper_skill.py  helpers.py  init.py  llm.py  llm_client.py  main.py  rag.py  skills.py  tool_base.py  types.py  workflow.py
src/api/: README.md  __init__.py  event_factory.py  main.py  schemas.py  service.py  (+1 more)
tests/: test_app_tools.py  test_helper_skill.py  test_init.py  test_llm.py  test_main.py
(+86 files in other folders)
