[project]
name = "my-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "litellm>=1.86.2",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[tool.uv]
exclude-newer = "1 week"
# exclude-newer-package = { fastapi = "0 day" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
