[project]
name = "my-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "litellm>=1.86.2",
    "microsandbox>=0.5.5",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
]

[project.scripts]
my-ai-agent = "agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent", "src/api"]

[tool.uv]
exclude-newer = "1 week"
# exclude-newer-package = { fastapi = "0 day" }
cache-dir = ".uv-cache"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
